rough home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="i_know_what_i_want">I Know What I Want</string>
+    <string name="i_d_like_suggestions">I\'d Like Suggestions</string>
+    <string name="random">Random</string>
+    <string name="history">History</string>
+    <string name="streaming_search">Streaming Search</string>
+
+
 </resources>
